# travel-plan-agent

./: .env.example  .gitignore  README.md  examples.py  pyproject.toml  requirements.txt
app/: index.html  script.js  styles.css
backend/: __init__.py
backend/app/: errors.py  main.py  schemas.py
backend/app/api/routes/: destinations.py  edit.py  export.py  health.py  map.py  poi.py  route_recommendation.py  trip.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: amap_geo_service.py  config_service.py  edit_service.py  export_service.py  map_service.py  poi_service.py  route_recommendation_service.py  trip_service.py
data/: travel_memory.json
tests/: test_rate_limit.py  test_travel_agent.py
travel_agent/: __init__.py
travel_agent/agents/: __init__.py  attraction_search_agent.py  hotel_agent.py  planner_agent.py  restaurant_agent.py  route_planning_agent.py  scenic_search_agent.py  topic_guard_agent.py  travel_planner_agent.py  weather_query_agent.py
travel_agent/core/: __init__.py  agent.py  config.py  exceptions.py  llm.py  memory.py  message.py  rate_limit.py
travel_agent/data/: __init__.py  china_regions.py
travel_agent/tools/: __init__.py  base.py  registry.py
travel_agent/tools/builtin/: __init__.py  amap.py  amap_geo.py  attraction_rag.py  budget.py  destination_data.py  export_payload.py  itinerary.py  map_route.py  serpapi.py  weather.py
