[project]
name = "travel-plan-agent"
version = "0.2.0"
description = "A FastAPI-based multi-agent travel planning app."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
cache_dir = "C:/tmp/travel-plan-agent-pytest-cache"
